<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border_dialog_feedback"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:text="@string/tell_us_function_you_want"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/text_normal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtSubject"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:lines="3"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:hint="@string/function_you_want"
        android:textSize="16sp"
        android:textColor="@color/text_normal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtMessage"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:lines="6"
        android:gravity="start|top"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:hint="@string/explain_more_detail_about_function"
        android:textSize="16sp"
        android:textColor="@color/text_normal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round"/>
    <Button
        android:id="@+id/btnSend"
        android:text="@string/send_to_us"
        android:textSize="16sp"
        android:background="@drawable/ripple_rounded_rectangle_fill"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>