<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.voicerecorder.audiorecorder.soundrecorder.recordaudioandroid.activities.WelcomeActivity">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_welcome" />

    <TextView
        android:id="@+id/titleWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgView"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/i_miss_your_voice"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <TextView
        android:textSize="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleWelcome"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:text="@string/all_superior_smart_features_are_ready_for_your_amazing_expreience"
        android:textColor="#3A3A3A" />

    <LinearLayout
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_btn_welcome"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/i_m_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_next_welcome" />
    </LinearLayout>
</RelativeLayout>