<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.voicerecorder.audiorecorder.soundrecorder.recordaudioandroid.activities.RecordingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:background="@color/color_78797A"
        android:translationZ="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/MainToolbarStyle"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@color/transparent"
            app:collapseIcon="@drawable/ic_back"
            app:title="SAVING"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/abc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/border_content"
        android:translationZ="10dp"
        app:cardCornerRadius="@dimen/layout_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_content"
            android:orientation="vertical"
            android:paddingBottom="36dp">

            <TextView
                android:id="@+id/space_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="37kb"
                android:textColor="#80000000"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EFEFEF" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/montserrat"
                    android:text="Saving : (205) 555-0100.ogg"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tv_file"
                    android:layout_marginTop="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/ll_loading"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:visibility="visible">

                            <ImageView
                                android:id="@+id/iv_loading"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="40dp"
                                android:fontFamily="@font/rubik_regular"
                                android:text="@string/loading"
                                android:textColor="#242B2A"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_success"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_success_save_file" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="40dp"
                                android:fontFamily="@font/rubik_medium"
                                android:text="@string/success"
                                android:textColor="#242B2A"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="20dp"
                                android:fontFamily="@font/rubik_regular"
                                android:text="@string/saved_to_your_project"
                                android:textColor="#666666"
                                android:textSize="20sp" />

                            <Button
                                android:id="@+id/iv_preview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="20dp"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/border_btn_preview"
                                android:fontFamily="@font/rubik_medium"
                                android:paddingVertical="17dp"
                                android:text="@string/preview"
                                android:textColor="#F0F0F1"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </RelativeLayout>
                </androidx.core.widget.NestedScrollView>

            </RelativeLayout>


        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
